--- a/css/contacto.css
+++ b/css/contacto.css
@@ -9,6 +9,8 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-column: 1/6;
+    background-image: url("../img/gatosFondo.jpg");
+    background-attachment: fixed;
 }
 
 #contactos{
