--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,7 @@
 }
 
 .container{
-    background-color: rgb(249, 250, 255);
-    background-image: url("img/gatosFondo.jpg");
+    background-image: url("../img/gatosFondo.jpg");
     background-attachment: fixed;
 }
 nav{
