--- a/css/contacto.css
+++ b/css/contacto.css
@@ -7,10 +7,11 @@
 
 .container{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 60% auto;
     grid-column: 1/6;
     background-image: url("../img/gatosFondo.jpg");
     background-attachment: fixed;
+    margin-top: 60px;
 }
 
 #contactos{
@@ -145,7 +146,7 @@ button:active{
 
 #telefono2, #email2{
     display: flex;
-    justify-content: center;
+    justify-content: start;
     margin-bottom: 35px;
 }
 
@@ -163,8 +164,7 @@ button:active{
 }
 
 #mapa iframe{
-    margin-left: 39%;
-    width: 50%;
+    width: 100%;
     height: 300px;
     border-radius: 5%;
 }
