--- a/css/contacto.css
+++ b/css/contacto.css
@@ -72,11 +72,16 @@
 #formulario{
     display: flex;
     justify-content: center;
+    border: 1px solid rgb(167, 165, 165);
+    border-style: dashed;
+    border-radius: 12px;
+    margin: 10% 25%;
+    padding-bottom: 5%;
 }
 
 form{
     float: left;
-    width: 50%;
+    width: 80%;
     height: 100%;
 }
 
