--- a/css/adoptar.css
+++ b/css/adoptar.css
@@ -75,12 +75,10 @@
     display: grid;    
     width: 1000px;
     height: 300px;
-    border: 5px solid rgba(34, 33, 33, 0.1);
-    border-radius: 20px;
-    
+    border: 1px solid rgb(167, 165, 165);    
+    border-style: dashed;
+    border-radius: 20px;    
     background-color:white;
-    
-
 }
 
 .imagen{
@@ -125,7 +123,6 @@
 .available .links button{
     border: 1px solid grey;
     border-radius: 10px;
-    border-style: dashed;
     padding: 5px;
     background-color: transparent;
     color: grey;
