--- a/css/footer.css
+++ b/css/footer.css
@@ -14,6 +14,9 @@
     justify-content: space-around;
     padding: 30px;
     background-color: white;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
 .footer a{
