--- a/css/navbar.css
+++ b/css/navbar.css
@@ -5,6 +5,8 @@ nav{
     grid-template-columns: repeat(2, 1fr);
     background-color: white; 
     border-bottom: 1px solid rgba(45,45,45,.1);
+    z-index: 1;
+    padding: 14px 17px;
 }
 
 
@@ -28,8 +30,8 @@ nav{
 
 nav img{
     float: left; 
-    width: 100px;
-    height: 100px;   
+    width: 205px;
+    height: 109px;   
  }
 
 nav span{
