--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,9 @@
 .container{
     background-image: url("../img/gatosFondo.jpg");
     background-attachment: fixed;
+    position: relative;
+    min-height: 100vh;
+    padding-bottom: 200px;
 }
 
 .title{
