--- a/css/contacto.css
+++ b/css/contacto.css
@@ -5,7 +5,7 @@
     font-family: "Inter", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.container{
+.pagina{
     display: grid;
     grid-template-columns: 60% auto;
     grid-column: 1/6;
@@ -14,6 +14,12 @@
     position: relative;
     min-height: 100vh;
 }
+
+.navbar{
+    display: grid;
+    grid-column: 1/6 ;
+}
+
 
 #contactos{
     grid-template-rows: repeat(5, 1fr);
@@ -26,7 +32,7 @@
 .available,
 #links,
 #logo,
-.container,
+.pagina,
 #formulario,
 #contactos,
 .imagen,
@@ -129,7 +135,7 @@ button:active{
 }
 
 #mapa iframe{
-    width: 100%;
+    width: 50%;
     height: 300px;
     border-radius: 5%;
 }
@@ -139,5 +145,5 @@ input[type=number]::-webkit-inner-spin-button {
 } 
 
 iframe{
-    width: 200%;
+    width: 100%;
 }
