--- a/css/contacto.css
+++ b/css/contacto.css
@@ -64,17 +64,13 @@
 
 #separador{
     display: flex;
+    justify-content: center;
     width: 100%;
-    height: 60px;;
-    align-items: center;
-    justify-content: space-around;
-    
+    height: 60px;
 }
 
-#separador img{
-    width: 75px;
-    height: 15px;   
-    margin-right: 30px;
+#separador hr{
+    width: 50%;
 }
 
 #formulario{
