--- a/css/donar.css
+++ b/css/donar.css
@@ -58,18 +58,13 @@
 
 #separador{
     display: flex;
+    justify-content: center;
     width: 100%;
-    height: 60px;;
-    align-items: center;
-    justify-content: space-around;
-    margin-bottom: 100px;
-    
+    height: 60px;
 }
 
-#separador img{
-    width: 75px;
-    height: 15px;   
-    margin-right: 30px;
+#separador hr{
+    width: 50%;
 }
 
 .card-title {
