--- a/css/voluntariado.css
+++ b/css/voluntariado.css
@@ -41,7 +41,8 @@
 .header,
 .title,
 #separador,
-.footer{   
+.footer
+{   
     grid-column: 1/6;
 }
 
@@ -55,18 +56,15 @@
 
 #separador{
     display: flex;
+    justify-content: center;
     width: 100%;
-    height: 60px;;
-    align-items: center;
-    justify-content: space-around;
-    
+    height: 60px;
 }
 
-#separador img{
-    width: 75px;
-    height: 15px;   
-    margin-right: 30px;
+#separador hr{
+    width: 50%;
 }
+
 
 #formulario{
     display: flex;
