--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,25 @@ iframe{
     width: 300%;
 }
 
+.modificarNavbar img{
+    vertical-align: text-bottom;
+    width: 100%;
+}
+
+ .modificarNavbar span{
+    color: black;
+ }
+
+ .modificarNavbar a{
+    color: grey;
+    text-decoration: none;
+    border-bottom: 2px solid transparent;
+ }
+
+ .modificarNavbar a:hover{
+    transition: 1s;
+    border-color: grey;  
+ }
 
 /* FIN ESTILOS VISUALES */
 
