--- a/css/voluntariado.css
+++ b/css/voluntariado.css
@@ -198,6 +198,26 @@ iframe{
     margin: 60px auto;
     width: 80%;
  }
+
+ .modificarNavbar img{
+    vertical-align: text-bottom;
+    width: 100%;
+}
+
+ .modificarNavbar span{
+    color: black;
+ }
+
+ .modificarNavbar a{
+    color: grey;
+    text-decoration: none;
+    border-bottom: 2px solid transparent;
+ }
+
+ .modificarNavbar a:hover{
+    transition: 1s;
+    border-color: grey;  
+ }
  
  @media (width<1052px){
     form{
