--- a/css/adoptar.css
+++ b/css/adoptar.css
@@ -47,18 +47,12 @@
     justify-content: center;
     margin: 60px 0;
 }
-#separador{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 60px;
-}
 
 #separador hr{
     width: 50%;
 }
 
-.pagina{
+body{
     background-image: url("../img/gatosFondo.jpg");
     background-attachment: fixed;
     position: relative;
@@ -66,96 +60,11 @@
     padding-bottom: 200px;
 }
 
-.availables{
-    display: flex;
-    justify-content: center;
+.card-deck img{
+    max-width: 300px;
+    max-height: 300px;
+    margin: auto;
+    border-radius: 3px;
+    margin-top: 16px;
 }
 
-.available{
-    margin-top: 60px;
-    display: grid;    
-    width: 1000px;
-    height: 300px;
-    border: 1px solid rgb(167, 165, 165);    
-    border-style: dashed;
-    border-radius: 20px;    
-    background-color:white;
-}
-
-.imagen{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.imagen img{
-    width: 300px;
-    height: 260px;
-    border-radius: 20px;
-}
-
-.available ul{
-    margin-top: 30px;
-}
-
-.available ul li span{
-    display: inline;
-    font-size: 25px;
-    margin-bottom: 25px;
-}
-
-.available ul li strong{
-    display: inline-block;
-    margin-top: 25px;
-}
-
-.available ul li {
-    list-style: none;
-}
-
-.available .links{
-    display: flex;
-    align-items: end;
-    justify-content: space-between;    
-    padding: 20px;
-    color: grey;
-}
-
-.available .links button{
-    border: 1px solid grey;
-    border-radius: 10px;
-    padding: 5px;
-    background-color: transparent;
-    color: grey;
-    font-size: 15px;
-    cursor: pointer; 
-}
-
-.available .links button:active{
-    background-color: rgb(209, 204, 204);
-    color: black;
-}
-
-iframe{
-    width: 300%;
-}
-
-.modificarNavbar img{
-    vertical-align: text-bottom;
-    width: 100%;
-}
-
- .modificarNavbar span{
-    color: black;
- }
-
- .modificarNavbar a{
-    color: grey;
-    text-decoration: none;
-    border-bottom: 2px solid transparent;
- }
-
- .modificarNavbar a:hover{
-    transition: 1s;
-    border-color: grey;  
- }
