--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@
 
 .presentation img{
     margin-top: 20px;
-    width: 70%;
+   
     height: 781px;
     max-width: 732px;
     transition: all .2s;
@@ -149,13 +149,17 @@ iframe{
     border-color: grey;  
  }
 
+ .space {
+    margin-right: 10px;
+}
+
  @media (width<1266px){
     .cards{       
         grid-template-columns: repeat(1, 1fr);
      }    
  }
 
- @media (width<750px){
+ @media (width<970px){
     .presentation img{
         transform: scale(.7);
         width: 120%;
