--- a/css/style.css
+++ b/css/style.css
@@ -1,172 +1,126 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Inter", "Helvetica Neue", Helvetica, Arial, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
- /* INICIO MAQUETADO CSS GRID */
-.cards{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+/* INICIO MAQUETADO CSS GRID */
+.cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
-
-.header,
-.title,
-.presentation,
-.opinions,
-.opinion,
-#links,
-#logo,
-.footer,
-#separador
-{
-/*     border: 1px solid black;
- */}
 
 .header,
 .title,
 #separador,
 .presentation,
 .opinions,
-.footer
-{
-   
-    grid-column: 1/6;
+.footer {
+  grid-column: 1/6;
 }
 
-.pagina{
-    background-image: url("../img/gatosFondo.jpg");
-    background-attachment: fixed;
-    position: relative;
-    min-height: 100vh;
-    padding-bottom: 200px;
-    width: 100%;
+.pagina {
+  background-image: url("../img/gatosFondo.jpg");
+  background-attachment: fixed;
+  position: relative;
+  min-height: 100vh;
+  padding-bottom: 200px;
+  width: 100%;
 }
 
-.title{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    margin: 60px 0;
+.title {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin: 60px 0;
 }
 
-#separador{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 60px;
+.presentation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 60px;
+}
+.presentation img {
+  margin-top: 20px;
+  height: 781px;
+  max-width: 732px;
+  transition: all 0.2s;
 }
 
-#separador hr{
-    width: 50%;
-}
-
-.presentation{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 60px;
-}
-
-.presentation img{
-    margin-top: 20px;
-   
-    height: 781px;
-    max-width: 732px;
-    transition: all .2s;
-}
-
-.opinion{    
+.opinion {
   display: grid;
   place-content: center;
   padding: 10px;
-
+}
+.opinion img {
+  float: left;
+  width: 60px;
+  height: 60px;
+}
+.opinion span {
+  display: inline-block;
+  margin-left: 2%;
+  margin-top: 4%;
+  font-weight: bold;
 }
 
-.opinion img{
-    float: left;
-    width: 60px;
-    height: 60px;    
-}
-.opinion span{
-    display: inline-block;
-    margin-left: 2%;
-    margin-top: 4%;
-    font-weight: bold;
-}
-.comentario{
-    width: 400px;
-    height: 120px;
-    background-color: rgb(214, 214, 214);
-    border-radius: 20px;
-    padding: 30px;
+.comentario {
+  width: 400px;
+  height: 120px;
+  background-color: rgb(214, 214, 214);
+  border-radius: 20px;
+  padding: 30px;
 }
 
-.usuario{
-    margin-top: 20px;
+.usuario {
+  margin-top: 20px;
 }
 
-
-
-/* FIN MAQUETADO CSS GRID */
-
-/* INICIO ESTILOS VISUALES */
-
-nav img{
-    float: left; 
-    width: 100px;
-    height: 100px;   
- }
-
-nav span{
-display: inline-block;
-   margin-top: 4%;  
-   font-weight: bold;
-   font-size: 18px;
+nav img {
+  float: left;
+  width: 100px;
+  height: 100px;
 }
-iframe{
-    width: 300%;
+nav span {
+  display: inline-block;
+  margin-top: 4%;
+  font-weight: bold;
+  font-size: 18px;
 }
 
-.modificarNavbar img{
-    vertical-align: text-bottom;
-    width: 100%;
+.modificarNavbar img {
+  vertical-align: text-bottom;
+  width: 100%;
+}
+.modificarNavbar span {
+  color: black;
+}
+.modificarNavbar a {
+  color: grey;
+  text-decoration: none;
+  border-bottom: 2px solid transparent;
+}
+.modificarNavbar a:hover {
+  transition: 1s;
+  border-color: grey;
 }
 
- .modificarNavbar span{
-    color: black;
- }
-
- .modificarNavbar a{
-    color: grey;
-    text-decoration: none;
-    border-bottom: 2px solid transparent;
- }
-
- .modificarNavbar a:hover{
-    transition: 1s;
-    border-color: grey;  
- }
-
- .space {
-    margin-right: 10px;
+.space {
+  margin-right: 10px;
 }
 
- @media (width<1266px){
-    .cards{       
-        grid-template-columns: repeat(1, 1fr);
-     }    
- }
+@media (width < 1266px) {
+  .cards {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+@media (width < 970px) {
+  .presentation img {
+    transform: scale(0.7);
+    width: 120%;
+  }
+}
 
- @media (width<970px){
-    .presentation img{
-        transform: scale(.7);
-        width: 120%;
-    }  
- }
- 
-/* FIN ESTILOS VISUALES */
-
-
-
+/*# sourceMappingURL=style.css.map */
