--- a/css/footer.css
+++ b/css/footer.css
@@ -1,33 +1,31 @@
-#redes ul{
-    list-style: none;
+#redes {
+  position: fixed;
+  right: 0px;
+  bottom: 0px;
+}
+#redes ul {
+  list-style: none;
+}
+#redes img {
+  width: 60px;
+  height: 60px;
 }
 
-#redes img{
-    width: 60px;
-    height: 60px;
+.footer {
+  margin-top: 60px;
+  border-top: 1px solid rgba(45, 45, 45, 0.1);
+  display: flex;
+  justify-content: space-around;
+  padding: 30px;
+  background-color: white;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.footer a {
+  text-decoration: none;
+  color: black;
 }
 
-.footer{
-    margin-top: 60px;
-    border-top: 1px solid rgba(45,45,45,.1);
-    display: flex;
-    justify-content: space-around;
-    padding: 30px;
-    background-color: white;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-}
-
-.footer a{
-    text-decoration: none;
-    color: black;
-}
-
-#redes{
-    
-    position: fixed;
-    right: 0px;
-    bottom: 0px;
-}
+/*# sourceMappingURL=footer.css.map */
