--- a/scss/donar.scss
+++ b/scss/donar.scss
@@ -5,21 +5,6 @@
     font-family: "Inter", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
- /* INICIO MAQUETADO CSS GRID */
-
-.header,
-.title,
-.presentation,
-.opinions,
-.opinion,
-#links,
-#logo,
-.footer,
-#separador
-{
-/*     border: 1px solid black;
- */}
-
 .pagina{
     background-image: url("../img/gatosFondo.jpg");
     background-attachment: fixed;
@@ -32,119 +17,65 @@
     
     display: flex;
     justify-content: center;
+
+    h1{
+        display: flex;
+        justify-content: center;
+        margin-top: 60px;
+        margin-bottom: 28px;    
+    }
+
+    span{
+        display: block;
+        font-size: 20px;
+        color: grey;
+    }
 }
 
-.title h1{
-    display: flex;
-    justify-content: center;
-    margin-top: 60px;
-    margin-bottom: 28px;    
-}
-
-.title span{
-    display: block;
-    font-size: 20px;
-    color: grey;
-}
-
-#separador{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 60px;
-}
-
-#separador hr{
-    width: 50%;
-}
-
-.card-title {
+.carrusel{
+    .modificarCardTitle {    
+        font-size: 30px;
+    }
     
-    font-size: 30px;
-}
-
-/* .card-body {
+    .modificarCardBody{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 220px;
+    }
     
-    height: 220px;
-} */
-
-.card-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 220px;
-}
-
-.form-group{
-    margin-top: 40px;
-}
-
-.btn-secondary {
-    margin-top: 20px;
-}
-
-.btn-secondary {
-    color: #fff;
-    margin-top: 20px;
-}
-
-.form-control:focus {
-    box-shadow: none;
-    border: 1px solid rgb(206, 212, 218);
-}
-
-/* FIN MAQUETADO CSS GRID */
-
-/* INICIO ESTILOS VISUALES */
-
-
-
-
-
-
-
-iframe{
-    width: 300%;
+    .modificarBoton {
+        color: #fff;
+        margin-top: 20px;
+    }
 }
 
 
-.space {
-    margin-right: 10px;
+
+.modificarNavbar{
+
+    img{
+        vertical-align: text-bottom;
+        width: 100%;
+    }
+
+    span{
+        color: black;
+    }
+
+    a{
+        color: grey;
+        text-decoration: none;
+        border-bottom: 2px solid transparent;
+    }
+
+    a:hover{
+        transition: 1s;
+        border-color: grey;  
+    }
+
+    .space {
+        margin-right: 10px;
+    }
 }
-
-.modificarNavbar img{
-    vertical-align: text-bottom;
-    width: 100%;
-}
-
-.modificarNavbar span{
-    color: black;
-}
-
-.modificarNavbar a{
-    color: grey;
-    text-decoration: none;
-    border-bottom: 2px solid transparent;
-}
-
-.modificarNavbar a:hover{
-    transition: 1s;
-    border-color: grey;  
-}
-
-.modificarCards{
-    margin-top: 100px;
-}
-
-.centrado{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
-}
-
-
-/* FIN ESTILOS VISUALES */
-
-
-
