--- a/scss/contacto.scss
+++ b/scss/contacto.scss
@@ -5,44 +5,32 @@
     font-family: "Inter", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.pagina{
-    display: grid;
-    grid-template-columns: 60% auto;
-    grid-column: 1/6;
-    background-image: url("../img/gatosFondo.jpg");
-    background-attachment: fixed;
-    position: relative;
-    min-height: 100vh;
-}
-
 .navbar{
     display: grid;
     grid-column: 1/6 ;
 }
 
+.modificarNavbar{
 
-#contactos{
-    margin: auto 0;
-}
+    span{
+        color: black;
+    }
 
-.header,
-.title,
-.availables,
-.available,
-#links,
-#logo,
-.pagina,
-#formulario,
-#contactos,
-.imagen,
-.descripcion,
-.links,
-#separador,
-#telefono2,
-#email2,
-#ubicacion,
-#mapa{
-  /*  border: 1px solid black;  */
+    a{
+        color: grey;
+        text-decoration: none;
+        border-bottom: 2px solid transparent;
+    }
+
+    a:hover{
+        transition: 1s;
+        border-color: grey;  
+    }
+
+    .space {
+        margin-right: 10px;
+    }
+
 }
 
 .header,
@@ -53,23 +41,18 @@
     grid-column: 1/6;
 }
 
+.pagina{
+    display: grid;
+    grid-template-columns: 60% auto;
+    grid-column: 1/6;
+    background-image: url("../img/gatosFondo.jpg");
+    background-attachment: fixed;
+    position: relative;
+    min-height: 100vh;
 
-
-/* FIN MAQUETADO CSS GRID */
-
-.title{
-    margin: 60px auto;
-}
-
-#separador{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 60px;
-}
-
-#separador hr{
-    width: 50%;
+    .title{
+        margin: 60px auto;
+    }
 }
 
 #formulario{
@@ -82,106 +65,90 @@
     padding-bottom: 5%;
     min-width: 400px;
     max-height: 900px;
+
+    form{
+        float: left;
+        width: 80%;
+        height: 100%;
+        min-width: 340px;
+
+        input, textarea, button{
+            display: block;
+            margin: auto;
+            margin-top: 60px;
+            border-radius: 20px;
+            width: 100%;
+            border: 1px solid grey;
+            outline: none;
+            padding: 20px;
+            background-color: white;
+            resize:none;
+        }
+
+        button{
+            cursor: pointer; 
+        }
+        
+        button:active{
+            background-color: rgb(209, 204, 204);
+            color: black;
+        }
+    }
 }
 
-form{
-    float: left;
-    width: 80%;
-    height: 100%;
-    min-width: 340px;
-}
+#contactos{
 
-input, textarea, button{
-    display: block;
-    margin: auto;
-    margin-top: 60px;
-    border-radius: 20px;
-    width: 100%;
-    border: 1px solid grey;
-    outline: none;
-    padding: 20px;
-    background-color: white;
-    resize:none;
-}
+    margin: auto 0;
 
-button{
-    cursor: pointer; 
-}
+    img{
+        width: 80px;
+        height: 80px;
+        vertical-align: middle;
+    }
 
-button:active{
-    background-color: rgb(209, 204, 204);
-    color: black;
-}
+    #telefono2, #email2{
+        display: flex;
+        justify-content: start;
+        margin-bottom: 35px;
+    }
 
-#telefono2, #email2{
-    display: flex;
-    justify-content: start;
-    margin-bottom: 35px;
-}
+    .datos{
+        display: flex;
+        flex-direction : column;
+        justify-content: center;
+        margin-left: 10px;
+    }
 
-#contactos img{
-    width: 80px;
-    height: 80px;
-    vertical-align: middle;
-}
-
-.datos{
-    display: flex;
-    flex-direction : column;
-    justify-content: center;
-    margin-left: 10px;
-}
-
-#mapa iframe{
-    width: 400px;
-    height: 300px;
-    border-radius: 5%;
+    #mapa{
+        iframe{
+            width: 400px;
+            height: 300px;
+            border-radius: 5%;
+        }
+    }
 }
 
 input[type=number]::-webkit-inner-spin-button {
     -webkit-appearance: none;
-} 
-
-
-
-
-
- .modificarNavbar span{
-    color: black;
- }
-
- .modificarNavbar a{
-    color: grey;
-    text-decoration: none;
-    border-bottom: 2px solid transparent;
- }
-
- .modificarNavbar a:hover{
-    transition: 1s;
-    border-color: grey;  
- }
-
- .space {
-    margin-right: 10px;
 }
 
- @media (width<1090px){
+@media (width<1090px){
     .pagina{
         grid-template-columns: 1fr;
         
     }
 
     #formulario{       
-       margin: auto;
-       margin-bottom: 60px;
+    margin: auto;
+    margin-bottom: 60px;
     }
 
     #contactos{       
         margin: auto;
         margin-bottom: 200px;
-     }
+    }
 
     #mapa iframe{
         width: 100%;
     }
- }
+}
