--- a/scss/contacto.scss
+++ b/scss/contacto.scss
@@ -5,6 +5,14 @@
     font-family: "Inter", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+.header,
+.title,
+#separador,
+.footer
+{   
+    grid-column: 1/6;
+}
+
 .navbar{
     display: grid;
     grid-column: 1/6 ;
@@ -33,14 +41,11 @@
 
 }
 
-.header,
-.title,
-#separador,
-.footer
-{   
-    grid-column: 1/6;
+.title{
+    display: flex;
+    justify-content: center;
+    margin: 60px 0;
 }
-
 .pagina{
     display: grid;
     grid-template-columns: 60% auto;
@@ -50,9 +55,7 @@
     position: relative;
     min-height: 100vh;
 
-    .title{
-        margin: 60px auto;
-    }
+    
 }
 
 #formulario{
