--- a/css/adoptar.css
+++ b/css/adoptar.css
@@ -1,174 +1,111 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Inter", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-.available{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
-
-.header,
-.title,
-.availables,
-.available,
-#logo,
-.footer,
-.imagen,
-.descripcion,
-#separador{
-/*      border: 1px solid black; */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .header,
 .title,
 #separador,
-.availables,
-.footer
-{
-   
-    grid-column: 1/6;
+.footer {
+  grid-column: 1/6;
 }
 
-.availables{
-     grid-template-columns: 1fr;
+body {
+  background-image: url("../img/gatosFondo.jpg");
+  background-attachment: fixed;
+  position: relative;
+  min-height: 100vh;
+  padding-bottom: 200px;
+}
+body .modificarNavbar img {
+  vertical-align: text-bottom;
+  float: left;
+  height: 100px;
+  width: 100%;
+}
+body .modificarNavbar span {
+  color: black;
+  display: inline-block;
+  margin-top: 4%;
+  font-weight: bold;
+  font-size: 18px;
+}
+body .modificarNavbar a {
+  color: grey;
+  text-decoration: none;
+  border-bottom: 2px solid transparent;
+}
+body .modificarNavbar img {
+  vertical-align: text-bottom;
+  width: 100%;
+}
+body .modificarNavbar a:hover {
+  transition: 1s;
+  border-color: grey;
+}
+body .modificarNavbar .space {
+  margin-right: 10px;
+}
+body .title {
+  display: flex;
+  justify-content: center;
+  margin: 60px 0;
+}
+body .disponibles img {
+  max-width: 300px;
+  max-height: 300px;
+  margin: auto;
+  border-radius: 3px;
+  margin-top: 16px;
+}
+body .disponibles h4 {
+  text-align: center;
+}
+body .disponibles ul {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 60px;
+  list-style: none;
+}
+body .disponibles li {
+  background-color: rgb(211, 206, 206);
+  border-radius: 20px;
+  padding: 5px 10px;
+  margin-bottom: 5px;
+}
+body .disponibles .disponible {
+  margin: 60px;
+}
+body .disponibles .disponible .botones {
+  width: 100%;
+}
+body .disponibles .disponible .botones .botonHembra {
+  background-color: pink;
+  border: none;
+  color: white;
+}
+body .disponibles .disponible .botones .botonMacho {
+  background-color: lightblue;
+  border: none;
+}
+body .disponibles .disponible .lista {
+  text-align: center;
 }
 
-/* FIN MAQUETADO CSS GRID */
-
-/* INICIO ESTILOS VISUALES */
-
-.title{
+@media (width > 575px) and (width < 1000px) {
+  .botones {
     display: flex;
-    justify-content: center;
-    margin: 60px 0;
+    flex-direction: column;
+  }
+  .botones button {
+    margin-bottom: 10px;
+    width: 90%;
+  }
+  .disponibles ul {
+    display: inline-block;
+  }
 }
 
-#separador hr{
-    width: 50%;
-}
-
-body{
-    background-image: url("../img/gatosFondo.jpg");
-    background-attachment: fixed;
-    position: relative;
-    min-height: 100vh;
-    padding-bottom: 200px;
-}
-
-.card-deck img{
-    max-width: 300px;
-    max-height: 300px;
-    margin: auto;
-    border-radius: 3px;
-    margin-top: 16px;
-}
-
-.card-deck h4{
-    text-align: center;
-}
-
-.botonHembra{
-    background-color: pink;
-    border: none;
-    color: white;
-}
-
-.botonMacho{
-    background-color: lightblue;
-    border: none;
-
-}
-
-.disponible{
-    margin: 60px;
-}
-
-.disponibles ul{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 60px;
-    list-style: none;
-}
-
-.disponibles li{
-    background-color: rgb(211, 206, 206);
-    border-radius: 20px;
-    padding: 5px 10px;
-    margin-bottom: 5px;
-}
-
-.links{
-    color: red;
-    background-color: green;
-    display: flex;
-    align-items: center;
-    margin: auto;
-}
-
-.botones{
-    width: 100%;
-}
-
-.lista{
-    text-align:center;
-}
-
-.space {
-    margin-right: 10px;
-}
-
-nav img{
-    float: left; 
-    width: 100px;
-    height: 100px;   
- }
-
-nav span{
-display: inline-block;
-   margin-top: 4%;  
-   font-weight: bold;
-   font-size: 18px;
-}
-iframe{
-    width: 300%;
-}
-
-.modificarNavbar img{
-    vertical-align: text-bottom;
-    width: 100%;
-}
-
- .modificarNavbar span{
-    color: black;
- }
-
- .modificarNavbar a{
-    color: grey;
-    text-decoration: none;
-    border-bottom: 2px solid transparent;
- }
-
- .modificarNavbar a:hover{
-    transition: 1s;
-    border-color: grey;  
- }
-
-
-@media (width>575px) and (width<1000px){
-    .botones{
-        display: flex;
-        flex-direction: column;
-    }    
-    .botones button{
-        margin-bottom: 10px;
-        width: 90%;
-    }
-
-    .disponibles ul{
-        display:inline-block;        
-    }  
-    
-}
+/*# sourceMappingURL=adoptar.css.map */
