--- a/css/adoptar.css
+++ b/css/adoptar.css
@@ -63,18 +63,6 @@ body .disponibles img {
 body .disponibles h4 {
   text-align: center;
 }
-body .disponibles ul {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 60px;
-  list-style: none;
-}
-body .disponibles li {
-  background-color: rgb(211, 206, 206);
-  border-radius: 20px;
-  padding: 5px 10px;
-  margin-bottom: 5px;
-}
 body .disponibles .disponible {
   margin: 60px;
 }
@@ -93,8 +81,20 @@ body .disponibles .disponible .botones .botonMacho {
 body .disponibles .disponible .lista {
   text-align: center;
 }
+body .disponibles .disponible ul {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 60px;
+  list-style: none;
+}
+body .disponibles .disponible li {
+  background-color: rgb(211, 206, 206);
+  border-radius: 20px;
+  padding: 5px 10px;
+  margin-bottom: 5px;
+}
 
-@media (width > 575px) and (width < 1000px) {
+@media (width > 575px) and (width < 1100px) {
   .botones {
     display: flex;
     flex-direction: column;
@@ -104,7 +104,7 @@ body .disponibles .disponible .lista {
     width: 90%;
   }
   .disponibles ul {
-    display: inline-block;
+    flex-direction: column;
   }
 }
 
