--- a/scss/adoptar.scss
+++ b/scss/adoptar.scss
@@ -78,20 +78,6 @@ body {
             text-align: center;
         }
 
-        ul {
-            display: flex;
-            justify-content: space-around;
-            margin-top: 60px;
-            list-style: none;
-        }
-
-        li {
-            background-color: rgb(211, 206, 206);
-            border-radius: 20px;
-            padding: 5px 10px;
-            margin-bottom: 5px;
-        }
-
         .disponible {
             margin: 60px;
 
@@ -113,12 +99,29 @@ body {
             .lista {
                 text-align: center;
             }
+
+            
+        ul {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 60px;
+            list-style: none;
+        }
+
+        li {
+            background-color: rgb(211, 206, 206);
+            border-radius: 20px;
+            padding: 5px 10px;
+            margin-bottom: 5px;
+        }
+
         }
     }
 
 }
 
-@media (width>575px) and (width<1000px) {
+@media (width>575px) and (width<1100px) {
+    
     .botones {
         display: flex;
         flex-direction: column;
@@ -130,7 +133,7 @@ body {
     }
 
     .disponibles ul {
-        display: inline-block;
+        flex-direction: column;
     }
 
 }
