--- a/scss/adoptar.scss
+++ b/scss/adoptar.scss
@@ -79,7 +79,7 @@ body {
         }
 
         .disponible {
-            margin: 60px;
+            margin-bottom: 30px;
 
             .botones {
                 width: 100%;
