--- a/scss/adoptar.scss
+++ b/scss/adoptar.scss
@@ -1,3 +1,8 @@
+$botonHembra-color: rgb(255, 192, 203);
+$botonMacho-color: rgb(173, 216, 230);
+$caracteristicas-color: rgb(211, 206, 206);
+
+
 * {
     margin: 0;
     padding: 0;
@@ -85,13 +90,13 @@ body {
                 width: 100%;
 
                 .botonHembra {
-                    background-color: pink;
+                    background-color: $botonHembra-color;
                     border: none;
                     color: white;
                 }
 
                 .botonMacho {
-                    background-color: lightblue;
+                    background-color: $botonMacho-color;
                     border: none;
                 }
             }
@@ -109,7 +114,7 @@ body {
         }
 
         li {
-            background-color: rgb(211, 206, 206);
+            background-color: $caracteristicas-color;
             border-radius: 20px;
             padding: 5px 10px;
             margin-bottom: 5px;
