--- a/scss/contacto.scss
+++ b/scss/contacto.scss
@@ -1,3 +1,6 @@
+$active-button-color: rgb(209, 204, 204);
+$formulario-border-color: rgb(167, 165, 165);
+
 *{
     margin: 0;
     padding: 0;
@@ -61,7 +64,7 @@
 #formulario{
     display: flex;
     justify-content: center;
-    border: 1px solid rgb(167, 165, 165);
+    border: 1px solid $formulario-border-color;
     border-style: dashed;
     border-radius: 12px;
     margin: 10% 25%;
@@ -93,7 +96,7 @@
         }
         
         button:active{
-            background-color: rgb(209, 204, 204);
+            background-color: $active-button-color;
             color: black;
         }
     }
