--- a/css/contacto.css
+++ b/css/contacto.css
@@ -20,17 +20,20 @@
 .modificarNavbar span {
   color: black;
 }
-.modificarNavbar a {
+.modificarNavbar .links a {
   color: grey;
   text-decoration: none;
   border-bottom: 2px solid transparent;
 }
-.modificarNavbar a:hover {
+.modificarNavbar .links a:hover {
   transition: 1s;
   border-color: grey;
 }
 .modificarNavbar .space {
   margin-right: 10px;
+}
+.modificarNavbar .logo {
+  width: 25%;
 }
 
 .title {
