--- a/css/donar.css
+++ b/css/donar.css
@@ -51,12 +51,12 @@
 .modificarNavbar span {
   color: black;
 }
-.modificarNavbar a {
+.modificarNavbar .links a {
   color: grey;
   text-decoration: none;
   border-bottom: 2px solid transparent;
 }
-.modificarNavbar a:hover {
+.modificarNavbar .links a:hover {
   transition: 1s;
   border-color: grey;
 }
