--- a/css/style.css
+++ b/css/style.css
@@ -97,12 +97,12 @@ nav span {
 .modificarNavbar span {
   color: black;
 }
-.modificarNavbar a {
+.modificarNavbar .links a {
   color: grey;
   text-decoration: none;
   border-bottom: 2px solid transparent;
 }
-.modificarNavbar a:hover {
+.modificarNavbar .links a:hover {
   transition: 1s;
   border-color: grey;
 }
