--- a/css/voluntariado.css
+++ b/css/voluntariado.css
@@ -69,12 +69,12 @@ form .modificarFormGroup {
 .modificarNavbar span {
   color: black;
 }
-.modificarNavbar a {
+.modificarNavbar .links a {
   color: grey;
   text-decoration: none;
   border-bottom: 2px solid transparent;
 }
-.modificarNavbar a:hover {
+.modificarNavbar .links a:hover {
   transition: 1s;
   border-color: grey;
 }
