--- a/scss/adoptar.scss
+++ b/scss/adoptar.scss
@@ -41,7 +41,7 @@ body {
             font-size: 18px;
         }
 
-        a {
+        .links a {
             color: grey;
             text-decoration: none;
             border-bottom: 2px solid transparent;
@@ -52,7 +52,7 @@ body {
             width: 100%;
         }
 
-        a:hover {
+        .links a:hover {
             transition: 1s;
             border-color: grey;
         }
