--- a/scss/donar.scss
+++ b/scss/donar.scss
@@ -64,13 +64,13 @@
         color: black;
     }
 
-    a{
+    .links a{
         color: grey;
         text-decoration: none;
         border-bottom: 2px solid transparent;
     }
 
-    a:hover{
+    .links a:hover{
         transition: 1s;
         border-color: grey;  
     }
