--- a/scss/voluntariado.scss
+++ b/scss/voluntariado.scss
@@ -76,13 +76,13 @@ form {
         color: black;
     }
 
-    a {
+    .links a {
         color: grey;
         text-decoration: none;
         border-bottom: 2px solid transparent;
     }
 
-    a:hover {
+    .links a:hover {
         transition: 1s;
         border-color: grey;
     }
